BaseletElements/src/com/baselet/element/facet/common/CustomDrawingParser/CustomDrawingParserParser.java
// Generated from CustomDrawingParser.g4 by ANTLR 4.5

package com.baselet.element.facet.common.CustomDrawingParser;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.Recognizer;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import com.baselet.control.enums.AlignHorizontal;
import com.baselet.control.enums.LineType;
import com.baselet.diagram.draw.DrawHandler;
import com.baselet.diagram.draw.helper.ColorOwn;
import com.baselet.diagram.draw.helper.ColorOwn.Transparency;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public abstract class CustomDrawingParserParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
			T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, WIDTH = 24,
			HEIGHT = 25, TRUE = 26, FALSE = 27, LEFT = 28, RIGHT = 29, CENTER = 30, UNSIGNED_DOUBLE_CONSTANT = 31,
			COLOR_OWN_HEX = 32, COLOR_OWN_NAME = 33, WS = 34, SIMPLE_STRING = 35, COMMENT = 36,
			ILLEGAL = 37;
	public static final int
			RULE_parse = 0, RULE_drawLine = 1, RULE_drawRectangle = 2, RULE_drawRectangleRound = 3,
			RULE_drawCircle = 4, RULE_drawEllipse = 5, RULE_drawArc = 6, RULE_drawText = 7,
			RULE_fg = 8, RULE_bg = 9, RULE_colorOwn = 10, RULE_lt = 11, RULE_lineType = 12,
			RULE_lw = 13, RULE_simpleString = 14, RULE_booleanConstant = 15, RULE_horizontalAlignment = 16,
			RULE_doubleTerm = 17, RULE_doubleProduct = 18, RULE_doubleValue = 19,
			RULE_unsignedDoubleConstant = 20;
	public static final String[] ruleNames = {
			"parse", "drawLine", "drawRectangle", "drawRectangleRound", "drawCircle",
			"drawEllipse", "drawArc", "drawText", "fg", "bg", "colorOwn", "lt", "lineType",
			"lw", "simpleString", "booleanConstant", "horizontalAlignment", "doubleTerm",
			"doubleProduct", "doubleValue", "unsignedDoubleConstant"
	};

	private static final String[] _LITERAL_NAMES = {
			null, "'drawLine('", "','", "')'", "'drawRectangle('", "'drawRectangleRound('",
			"'drawCircle('", "'drawEllipse('", "'drawArc('", "'drawText('", "'fg='",
			"'bg='", "'lt='", "'-'", "'.'", "'..'", "'='", "':'", "'::'", "'lw='",
			"'+'", "'*'", "'/'", "'('"
	};
	private static final String[] _SYMBOLIC_NAMES = {
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			"WIDTH", "HEIGHT", "TRUE", "FALSE", "LEFT", "RIGHT", "CENTER", "UNSIGNED_DOUBLE_CONSTANT",
			"COLOR_OWN_HEX", "COLOR_OWN_NAME", "WS", "SIMPLE_STRING", "COMMENT", "ILLEGAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "CustomDrawingParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	// JavaCC doesn't support user enriched constructors (adding additional parameters)
	// therefore we use abstract getters
	public abstract double getWidth();

	public abstract double getHeight();

	public abstract DrawHandler getDrawHandler();

	/***
	 * Is used to implement nested tasks.
	 * This is used to support the different setting commands after the drawing command.
	 * These need to store the old value and afterwards reset it to this value.
	 */
	private abstract class RecRunnable {
		private final RecRunnable inner;

		public RecRunnable(RecRunnable inner) {
			this.inner = inner;
		}

		public abstract void run();

		protected void runInner() {
			if (inner != null) {
				inner.run();
			}
		}
	}

	public CustomDrawingParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(Recognizer.EOF, 0);
		}

		public DrawLineContext drawLine() {
			return getRuleContext(DrawLineContext.class, 0);
		}

		public DrawRectangleContext drawRectangle() {
			return getRuleContext(DrawRectangleContext.class, 0);
		}

		public DrawRectangleRoundContext drawRectangleRound() {
			return getRuleContext(DrawRectangleRoundContext.class, 0);
		}

		public DrawCircleContext drawCircle() {
			return getRuleContext(DrawCircleContext.class, 0);
		}

		public DrawEllipseContext drawEllipse() {
			return getRuleContext(DrawEllipseContext.class, 0);
		}

		public DrawArcContext drawArc() {
			return getRuleContext(DrawArcContext.class, 0);
		}

		public DrawTextContext drawText() {
			return getRuleContext(DrawTextContext.class, 0);
		}

		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_parse;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).enterParse(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).exitParse(this);
			}
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(49);
				switch (_input.LA(1)) {
					case T__0: {
						setState(42);
						drawLine();
					}
						break;
					case T__3: {
						setState(43);
						drawRectangle();
					}
						break;
					case T__4: {
						setState(44);
						drawRectangleRound();
					}
						break;
					case T__5: {
						setState(45);
						drawCircle();
					}
						break;
					case T__6: {
						setState(46);
						drawEllipse();
					}
						break;
					case T__7: {
						setState(47);
						drawArc();
					}
						break;
					case T__8: {
						setState(48);
						drawText();
					}
						break;
					case EOF:
						break;
					default:
						throw new NoViableAltException(this);
				}
				setState(51);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrawLineContext extends ParserRuleContext {
		public RecRunnable callStack = null;;
		public DoubleTermContext x1;
		public DoubleTermContext y1;
		public DoubleTermContext x2;
		public DoubleTermContext y2;
		public FgContext fg;
		public LtContext lt;
		public LwContext lw;

		public List<DoubleTermContext> doubleTerm() {
			return getRuleContexts(DoubleTermContext.class);
		}

		public DoubleTermContext doubleTerm(int i) {
			return getRuleContext(DoubleTermContext.class, i);
		}

		public List<FgContext> fg() {
			return getRuleContexts(FgContext.class);
		}

		public FgContext fg(int i) {
			return getRuleContext(FgContext.class, i);
		}

		public List<LtContext> lt() {
			return getRuleContexts(LtContext.class);
		}

		public LtContext lt(int i) {
			return getRuleContext(LtContext.class, i);
		}

		public List<LwContext> lw() {
			return getRuleContexts(LwContext.class);
		}

		public LwContext lw(int i) {
			return getRuleContext(LwContext.class, i);
		}

		public DrawLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_drawLine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).enterDrawLine(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).exitDrawLine(this);
			}
		}
	}

	public final DrawLineContext drawLine() throws RecognitionException {
		DrawLineContext _localctx = new DrawLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_drawLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(53);
				match(T__0);
				setState(54);
				_localctx.x1 = doubleTerm();
				setState(55);
				match(T__1);
				setState(56);
				_localctx.y1 = doubleTerm();
				setState(57);
				match(T__1);
				setState(58);
				_localctx.x2 = doubleTerm();
				setState(59);
				match(T__1);
				setState(60);
				_localctx.y2 = doubleTerm();
				setState(61);
				match(T__2);

				final double x1 = _localctx.x1.value;
				final double y1 = _localctx.y1.value;
				final double x2 = _localctx.x2.value;
				final double y2 = _localctx.y2.value;
				_localctx.callStack = new RecRunnable(null) {
					@Override
					public void run() {
						System.out.println(String.format("drawLine(%f, %f, %f, %f);", x1, y1, x2, y2));
						getDrawHandler().drawLine(x1, y1, x2, y2);
					}
				};
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((_la & ~0x3f) == 0 && (1L << _la & (1L << T__9 | 1L << T__11 | 1L << T__18)) != 0) {
					{
						setState(72);
						switch (_input.LA(1)) {
							case T__9: {
								setState(63);
								_localctx.fg = fg(_localctx.callStack);
								_localctx.callStack = _localctx.fg.callStack;
							}
								break;
							case T__11: {
								setState(66);
								_localctx.lt = lt(_localctx.callStack);
								_localctx.callStack = _localctx.lt.callStack;
							}
								break;
							case T__18: {
								setState(69);
								_localctx.lw = lw(_localctx.callStack);
								_localctx.callStack = _localctx.lw.callStack;
							}
								break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
			_localctx.callStack.run();
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrawRectangleContext extends ParserRuleContext {
		public RecRunnable callStack = null;;
		public DoubleTermContext x;
		public DoubleTermContext y;
		public DoubleTermContext width;
		public DoubleTermContext height;
		public FgContext fg;
		public BgContext bg;
		public LtContext lt;
		public LwContext lw;

		public List<DoubleTermContext> doubleTerm() {
			return getRuleContexts(DoubleTermContext.class);
		}

		public DoubleTermContext doubleTerm(int i) {
			return getRuleContext(DoubleTermContext.class, i);
		}

		public List<FgContext> fg() {
			return getRuleContexts(FgContext.class);
		}

		public FgContext fg(int i) {
			return getRuleContext(FgContext.class, i);
		}

		public List<BgContext> bg() {
			return getRuleContexts(BgContext.class);
		}

		public BgContext bg(int i) {
			return getRuleContext(BgContext.class, i);
		}

		public List<LtContext> lt() {
			return getRuleContexts(LtContext.class);
		}

		public LtContext lt(int i) {
			return getRuleContext(LtContext.class, i);
		}

		public List<LwContext> lw() {
			return getRuleContexts(LwContext.class);
		}

		public LwContext lw(int i) {
			return getRuleContext(LwContext.class, i);
		}

		public DrawRectangleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_drawRectangle;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).enterDrawRectangle(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).exitDrawRectangle(this);
			}
		}
	}

	public final DrawRectangleContext drawRectangle() throws RecognitionException {
		DrawRectangleContext _localctx = new DrawRectangleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_drawRectangle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(77);
				match(T__3);
				setState(78);
				_localctx.x = doubleTerm();
				{}
				setState(80);
				match(T__1);
				setState(81);
				_localctx.y = doubleTerm();
				{}
				setState(83);
				match(T__1);
				setState(84);
				_localctx.width = doubleTerm();
				{}
				setState(86);
				match(T__1);
				setState(87);
				_localctx.height = doubleTerm();
				{}
				setState(89);
				match(T__2);

				final double x = _localctx.x.value;
				final double y = _localctx.y.value;
				final double width = _localctx.width.value;
				final double height = _localctx.height.value;
				_localctx.callStack = new RecRunnable(null) {
					@Override
					public void run() {
						// System.out.println(String.format("drawRectangle(%f, %f, %f, %f);", x,y,width,height));
						getDrawHandler().drawRectangle(x, y, width, height);
					}
				};
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((_la & ~0x3f) == 0 && (1L << _la & (1L << T__9 | 1L << T__10 | 1L << T__11 | 1L << T__18)) != 0) {
					{
						setState(103);
						switch (_input.LA(1)) {
							case T__9: {
								setState(91);
								_localctx.fg = fg(_localctx.callStack);
								_localctx.callStack = _localctx.fg.callStack;
							}
								break;
							case T__10: {
								setState(94);
								_localctx.bg = bg(_localctx.callStack);
								_localctx.callStack = _localctx.bg.callStack;
							}
								break;
							case T__11: {
								setState(97);
								_localctx.lt = lt(_localctx.callStack);
								_localctx.callStack = _localctx.lt.callStack;
							}
								break;
							case T__18: {
								setState(100);
								_localctx.lw = lw(_localctx.callStack);
								_localctx.callStack = _localctx.lw.callStack;
							}
								break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
			_localctx.callStack.run();
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrawRectangleRoundContext extends ParserRuleContext {
		public RecRunnable callStack = null;;
		public DoubleTermContext x;
		public DoubleTermContext y;
		public DoubleTermContext width;
		public DoubleTermContext height;
		public DoubleTermContext radius;
		public FgContext fg;
		public BgContext bg;
		public LtContext lt;
		public LwContext lw;

		public List<DoubleTermContext> doubleTerm() {
			return getRuleContexts(DoubleTermContext.class);
		}

		public DoubleTermContext doubleTerm(int i) {
			return getRuleContext(DoubleTermContext.class, i);
		}

		public List<FgContext> fg() {
			return getRuleContexts(FgContext.class);
		}

		public FgContext fg(int i) {
			return getRuleContext(FgContext.class, i);
		}

		public List<BgContext> bg() {
			return getRuleContexts(BgContext.class);
		}

		public BgContext bg(int i) {
			return getRuleContext(BgContext.class, i);
		}

		public List<LtContext> lt() {
			return getRuleContexts(LtContext.class);
		}

		public LtContext lt(int i) {
			return getRuleContext(LtContext.class, i);
		}

		public List<LwContext> lw() {
			return getRuleContexts(LwContext.class);
		}

		public LwContext lw(int i) {
			return getRuleContext(LwContext.class, i);
		}

		public DrawRectangleRoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_drawRectangleRound;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).enterDrawRectangleRound(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CustomDrawingParserListener) {
				((CustomDrawingParserListener) listener).exitDrawRectangleRound(this);
			}
		}
	}

	public final DrawRectangleRoundContext drawRectangleRound() throws RecognitionException {
		DrawRectangleRoundContext _localctx = new DrawRectangleRoundContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_drawRectangleRound);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				match(T__4);
				setState(109);
				_localctx.x = doubleTerm();
				{}
				setState(111);
				match(T__1);
				setState(112);
				_localctx.y = doubleTerm();
				{}
				setState(114);
				match(T__1);
				setState(115);
				_localctx.width = doubleTerm();
				{}
				setState(117);
				match(T__1);
				setState(118);
				_localctx.height = doubleTerm();
				{}
				setState(120);
				match(T__1);
				setState(121);
				_localctx.radius = doubleTerm();
				{}
				setState(123);
				match(T__2);
